# OrbbecSDK-dev

cmake/: compiler_flags.cmake
examples/1.stream.color/: CMakeLists.txt  color.cpp
src/shared/environment/: OrbbecSDKConfig.xml
